# distributions

./: .gitignore  .travis.yml  CMakeLists.txt  FindMKL.cmake  FindYeppp.cmake  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.md  ctest.sh  requirements.txt  setup.py  test.sh  test_cmake.sh  update_license.py
benchmarks/: CMakeLists.txt  classifier.cc  mixture.cc  sample_assignment_from_py.cc  sample_from_scores.cc  score_counts.cc  special.cc
cmake/Modules/: FindLibM.cmake
conda/: README
conda/distributions/: build.sh  meta.yaml
conda/libprotobuf/: build.sh  meta.yaml  run_test.sh  schema.proto  test.cc
derivations/: .gitignore  betabinomial.py  clustering.py  logbeta.py  loggamma.py  vector_gof.py
derivations/clustering.data/: index.html
distributions/: __init__.py  __main__.py  _eigen.pxd  _eigen.pyx  _eigen_h.pxd  basicdist.py  cRandom.pxd  cRandom.pyx  cSpecial.pyx  cm.py  crp.py  fileutil.py  global_rng.pxd  global_rng.pyx  has_cython.pyx  mixins.py  names.py  pyp.py  random.py  rng.py  rng_cc.hpp  rng_cc.pxd  rng_cc.pyx  schema.proto  schema_pb2.py  scimath.pxd  scimath.pyx  sparse_counter.pxd  special.py  summaries.py  util.py
distributions/basic/: Bernoulli.py  Discrete.py  InverseGaussian.py  MultivariateNormal.py  Normal.py  Poisson.py  __init__.py
distributions/conjugate/: bb.py  cydd.pyx  cydpm.pyx  cygp.pyx  cynich.pyx  dd.py  dpm.py  gp.py  ngig.py  nich.py  niw.py  scimath.pxd  sparse_counter.hpp  sparse_counter.pxd  std_wrapper.hpp
distributions/dbg/: clustering.py  random.py  special.py
distributions/dbg/models/: bb.py  bnb.py  dd.py  dpd.py  gp.py  logisticexpexp.py  nich.py  nich_nc.py  nich_pc.py  niw.py
distributions/hp/: random.pxd  random.pyx  special.pxd  special.pyx
distributions/hp/models/: dd.pyx  dpd.pyx  gp.pyx  nich.pyx
distributions/io/: __init__.py  schema.proto  schema_pb2.py  stream.py
distributions/lp/: clustering.pyx  mixture.pyx  random.pxd  random.pyx  special.pyx  unordered_set.pxd  vector.pxd  vector.pyx
distributions/lp/models/: _bb.pxd  _bb.pyx  _bb_h.pxd  _bnb.pxd  _bnb.pyx  _bnb_h.pxd  _dd.pxd  _dd.pyx  _dd_h.pxd  _dpd.pxd  _dpd.pyx  _dpd_h.pxd  _gp.pxd  _gp.pyx  _gp_h.pxd  _nich.pxd  _nich.pyx  _nich_h.pxd  _niw.pxd  _niw.pyx  _niw_h.pxd  bb.pyx  bnb.pyx  dd.pyx  dd_cc.pxd  dpd.pyx  dpd_cc.pxd  dpm.pyx  gp.pyx  gp_cc.pxd  nich.pyx  nich_cc.pxd  niw.pyx
distributions/models/: dd.py  dd.pyx  dd_cc.pyx  dd_cy.pyx  dd_lp.pyx  dd_py.py  dpm_cc.pyx
distributions/tests/: test_clustering.py  test_dd.py  test_fileutil.py  test_foo.py  test_io.py  test_model_flavors.py  test_models.py  test_models_agree.py  test_normal_models.py  test_random.py  test_rng.py  test_special.py  test_util.py  util.py
doc/: Makefile  conf.py  guides.rst  index.rst  installation.rst  make.bat  overview.rst  references.bib
examples/cmake/: CMakeLists.txt  foo.cc
examples/mixture/: .gitignore  index.html  main.py  test.py
examples/testing/: gof.py
include/distributions/: aligned_allocator.hpp  assert_close.hpp  clustering.hpp  common.hpp  cython.hpp  mixins.hpp  mixture.hpp  models_fwd.hpp  protobuf.hpp  protobuf_stream.hpp  random.hpp  random_fwd.hpp  schema.pb.h  sparse.hpp  sparse_counter.hpp  special.hpp  std_wrapper.hpp  timers.hpp  trivial_hash.hpp  vector.hpp  vector_math.hpp
include/distributions/io/: protobuf.hpp  protobuf_stream.hpp  schema.pb.cc  schema.pb.h
include/distributions/models/: bb.hpp  bnb.hpp  dd.hpp  dpd.hpp  dpm.hpp  gp.hpp  nich.hpp  niw.hpp
src/: CMakeLists.txt  clustering.cc  common.cc  random.cc  schema.pb.cc  special.cc  std_wrapper.cc  test_headers.cc  test_models.cc  test_protobuf.cc  vector_math.cc
src/io/: schema.pb.cc
src/models/: bb.cc  gp.cc  nich.cc  niw.cc
tests/: test_basic.py  test_conjugate.py  test_crp_pyp.py  test_discrete.py  test_pyp.py  test_same.py  test_samplers.py  test_scimath.py  test_summaries.py  test_units.py  test_util.py  test_vectorize.py  test_xrp.py  util.py
